sfdx-source/force-app/main/default/objects/Sobject_Type_Sub_Type_Mapping__mdt/Sobject_Type_Sub_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-2976: It stores Type and Sub-Type mapping of a Sobject.</description>
    <label>Sobject Type Sub-Type Mapping</label>
    <pluralLabel>Sobject Type Sub-Type Mappings</pluralLabel>
</CustomObject>