sfdx-source/force-app/main/default/objects/Sobject_Type_Sub_Type_Mapping__mdt/fields/Sobject__c.field-meta.xml
<CustomField>
    <fullName>Sobject__c</fullName>
    <description>LEM-2976: It indicates the Sobject name.</description>
    <label>Sobject</label>
    <length>45</length>
    <type>Text</type>
</CustomField>