sfdx-source/force-app/main/default/objects/Sobject_Type_Sub_Type_Mapping__mdt/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>LEM-2976: It indicates the Sub-Type.</description>
    <label>Sub Type</label>
    <length>45</length>
    <type>Text</type>
</CustomField>