sfdx-source/force-app/main/default/objects/Sobject_Type_Sub_Type_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-2976: It indicates the Type.</description>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>