sfdx-source/force-app/main/default/objects/Sobject_Type_Sub_Type_Mapping__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>Sobject__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
</ListView>